[package]
name = "rtsp-to-webrtc"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-std = "1.12.0"
chrono = "0.4.22"
clap = "4.3.1"
clustervms = { git = "https://github.com/ClusterVMS/clustervms-rs" }
figment = "0.10.8"
futures = "0.3.24"
retina = "0.4.1"
rocket = "0.5.0-rc.2"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.24.2", features = ["sync", "fs"] }
toml = "0.5.9"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.3.1", features = ["serde"] }
webrtc = "0.6.0"
